# pyxai

./: .explainer  .gitignore  .gitmodules  .~lock.melb_data.csv#  Builder.py  CHANGELOG.md  Dockerfile  Explainer.py  LICENCE  LICENSE  Learning.py  MANIFEST.in  README.md  Tools.py  __init__.py  builder-simple.xml  convert.py  convert.py~  melb_data.csv  melb_data.types  melb_data_0.csv  melb_data_0.types  melb_data_1.csv  melb_data_1.types  melb_data_2.csv  melb_data_2.types  melb_data_3.csv  melb_data_3.types  melb_data_4.csv  melb_data_4.types  melb_data_5.csv  melb_data_5.types  publish_pypi.py  pyproject.toml  setup.py  simple.xml  simpleClassification.xml  update_pypi_version-OSX.py  update_pypi_version.py  version.txt
.github/workflows/: build_wheels.yml  build_wheels_linux.yml  build_wheels_macos.yml  delete_artifacts.yml  test_osx.yml  tests_linux.yml  tests_windows.yml
docker/pyxai-experimental/: Dockerfile  Untitled.ipynb
examples/BT/: QT5visualization.py  builder.py  simple.py  simpleClassification.py  simpleRegression.py  visualization.py
examples/Converters/: converter-adult.py  converter-airliquid.py  converter-australian.py  converter-balance-scale.py  (+20 more)
explanations/: BT_builder_regression.explainer  BT_mnist38_tree_specific_class_3.explainer  BT_mnist38_tree_specific_class_8.explainer  DT_loan.explainer  RF_breast_tumor_theory.explainer  RF_cnae.explainer  RF_iris_majoritary_theory.explainer
pypi/: publish_pypi.py
pyxai/: Explainer.py  Learning.py  README.md  Tools.py  __init__.py  __main__.py  clean.sh  setup.py
save_explanations/: BT_builder_simple.explainer  BT_iris.explainer  BT_mnist38_tree_specific_1.explainer  BT_mnist38_tree_specific_class_3.explainer  BT_mnist38_tree_specific_class_8.explainer  DT_dexter.explainer  DT_loan.explainer  DT_mnist38_hot_map.explainer  DT_wine.explainer  RF_australian_majoritary.explainer  RF_buba.explainer  RF_mnist49_minimal_majoritary.explainer
source/solvers/GREEDY/: CMakeLists.txt
source/solvers/GREEDY/src/: Explainer.h
sources/solvers/GREEDY/: CMakeLists.txt
sources/solvers/GREEDY/src/: Explainer.cc  Explainer.h  Node.cc  Node.h  Tree.cc  Tree.h  bt_wrapper.cc  constants.h
sources/solvers/GREEDY/src/bcp/: BufferRead.h  FactoryException.h  ParserDimacs.cc  ParserDimacs.h  Problem.cc  Problem.h  ProblemTypes.cc  ProblemTypes.h  Propagator.cc  Propagator.h
sources/solvers/GREEDY/src/utils/: TimerHelper.h
tests/: creditcard.csv.REMOVED.git-id  tests.py
tmp/: encore-86312640-instance.cnf  encore-86312640-model.cnf  encore-86312640-reference-instances-0.cnf  encore-86312640-reference-instances-1.cnf  wbo-10862915.wcnf  wbo-24932345.wcnf
try_save/: iris.0.map  iris.0.model  iris.1.map  iris.1.model  iris.2.map  iris.2.model  iris.3.map  iris.3.model  iris.4.map  iris.4.model  iris.5.map  iris.5.model  iris.6.map  iris.6.model  iris.7.map  iris.7.model  iris.8.map  iris.8.model  iris.9.map  iris.9.model  winequality-red.0.map  winequality-red.0.model  winequality-red.1.map  winequality-red.1.model  winequality-red.2.map  winequality-red.2.model  winequality-red.3.map  winequality-red.3.model  winequality-red.4.map  winequality-red.4.model  winequality-red.5.map  winequality-red.5.model  winequality-red.6.map  winequality-red.6.model  winequality-red.7.map  winequality-red.7.model  winequality-red.8.map  winequality-red.8.model  winequality-red.9.map  winequality-red.9.model
(+370 files in other folders)
